; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/reiserfs/extr_namei.c_set_de_item_location.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/reiserfs/extr_namei.c_set_de_item_location.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.reiserfs_dir_entry = type { i32, i32, i32, i32 }
%struct.treepath = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.reiserfs_dir_entry*, %struct.treepath*)* @set_de_item_location to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_de_item_location(%struct.reiserfs_dir_entry* %0, %struct.treepath* %1) #0 {
  %3 = alloca %struct.reiserfs_dir_entry*, align 8
  %4 = alloca %struct.treepath*, align 8
  store %struct.reiserfs_dir_entry* %0, %struct.reiserfs_dir_entry** %3, align 8
  store %struct.treepath* %1, %struct.treepath** %4, align 8
  %5 = load %struct.treepath*, %struct.treepath** %4, align 8
  %6 = call i32 @get_last_bh(%struct.treepath* %5)
  %7 = load %struct.reiserfs_dir_entry*, %struct.reiserfs_dir_entry** %3, align 8
  %8 = getelementptr inbounds %struct.reiserfs_dir_entry, %struct.reiserfs_dir_entry* %7, i32 0, i32 2
  store i32 %6, i32* %8, align 4
  %9 = load %struct.treepath*, %struct.treepath** %4, align 8
  %10 = call i32 @get_ih(%struct.treepath* %9)
  %11 = load %struct.reiserfs_dir_entry*, %struct.reiserfs_dir_entry** %3, align 8
  %12 = getelementptr inbounds %struct.reiserfs_dir_entry, %struct.reiserfs_dir_entry* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  %13 = load %struct.reiserfs_dir_entry*, %struct.reiserfs_dir_entry** %3, align 8
  %14 = getelementptr inbounds %struct.reiserfs_dir_entry, %struct.reiserfs_dir_entry* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.reiserfs_dir_entry*, %struct.reiserfs_dir_entry** %3, align 8
  %17 = getelementptr inbounds %struct.reiserfs_dir_entry, %struct.reiserfs_dir_entry* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @B_I_DEH(i32 %15, i32 %18)
  %20 = load %struct.reiserfs_dir_entry*, %struct.reiserfs_dir_entry** %3, align 8
  %21 = getelementptr inbounds %struct.reiserfs_dir_entry, %struct.reiserfs_dir_entry* %20, i32 0, i32 3
  store i32 %19, i32* %21, align 4
  %22 = load %struct.treepath*, %struct.treepath** %4, align 8
  %23 = call i32 @PATH_LAST_POSITION(%struct.treepath* %22)
  %24 = load %struct.reiserfs_dir_entry*, %struct.reiserfs_dir_entry** %3, align 8
  %25 = getelementptr inbounds %struct.reiserfs_dir_entry, %struct.reiserfs_dir_entry* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 4
  ret void
}

declare dso_local i32 @get_last_bh(%struct.treepath*) #1

declare dso_local i32 @get_ih(%struct.treepath*) #1

declare dso_local i32 @B_I_DEH(i32, i32) #1

declare dso_local i32 @PATH_LAST_POSITION(%struct.treepath*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
